fix(styles): deepen light-mode category glyph color for contrast (#349)

--- a/src/styles/education.css
+++ b/src/styles/education.css
@@ -8,10 +8,12 @@
 
 #education .education-list > li {
   --cat-rgb: var(--tl-mint);
+  --cat-fg: var(--tl-mint-fg);
 }
 
 #courses .education-list > li {
   --cat-rgb: var(--tl-amber);
+  --cat-fg: var(--tl-amber-fg);
 }
 
 .education-list > li {
